--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1344,8 +1344,8 @@ wizard.send_invitations.never_untrusted=<html>Geben Sie Einladungen nur an vertr
 wizard.send_invitations.over_powerfolder=\u00dcber PowerFolder versenden
 wizard.send_invitations.save_to_file=Als Datei speichern
 wizard.send_invitations.send_by_mail=Per Mail versenden
-wizard.send_invitations.send_invitation=Einladung versenden
-wizard.send_invitations.title=Einladung speichern
+wizard.send_invitations.title=Einladung versenden
+wizard.send_invitations.select=Einladung speichern
 wizard.send_invitations.offline=Nicht verbunden
 wizard.send_invitations.send_success=Einladung versendet
 wizard.send_invitations.send_success_info=Die Einladung wurde erfolgreich versendet.
