--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -1230,8 +1230,8 @@ wizard.send_invitations.never_untrusted=Never give out invitation files to untru
 wizard.send_invitations.over_powerfolder=Send via PowerFolder now
 wizard.send_invitations.save_to_file=Save as file
 wizard.send_invitations.send_by_mail=Send by mail
-wizard.send_invitations.send_invitation=Send invitation
-wizard.send_invitations.title=Save invitation
+wizard.send_invitations.title=Send invitation
+wizard.send_invitations.select=Save invitation
 wizard.send_invitations.offline=Not connected
 wizard.send_invitations.send_success=Invitation sent
 wizard.send_invitations.send_success_info=You successfully sent the invitation.
