--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -1278,8 +1278,8 @@ wizard.send_invitations.never_untrusted=Nunca entrege archivos invitaci\u00F3n a
 wizard.send_invitations.over_powerfolder=Via PowerFolder ahora
 wizard.send_invitations.save_to_file=Guardar como archivo
 wizard.send_invitations.send_by_mail=Enviar por mail
-wizard.send_invitations.send_invitation=Enviar invitaci\u00F3n
-wizard.send_invitations.title=Guardar invitaci\u00F3n
+wizard.send_invitations.title=Enviar invitaci\u00F3n
+wizard.send_invitations.select=Guardar invitaci\u00F3n
 wizard.send_invitations.offline=No conectado
 wizard.send_invitations.send_success=Invitaci\u00F3n enviada
 wizard.send_invitations.send_success_info=La invitaci\u00F3n se envi\u00F3 con exito.
