--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -1281,8 +1281,8 @@ wizard.send_invitations.never_untrusted=\nNe le diffusez jamais aupr\u00E8s d'in
 wizard.send_invitations.over_powerfolder=Instantan\u00E9ment via PowerFolder
 wizard.send_invitations.save_to_file=Enregistrer comme fichier
 wizard.send_invitations.send_by_mail=Envoyer par e-mail
-wizard.send_invitations.send_invitation=envoyer l'invitation
-wizard.send_invitations.title=Enregistrer une invitation
+wizard.send_invitations.title=envoyer l'invitation
+wizard.send_invitations.select=Enregistrer une invitation
 wizard.send_invitations.offline=D\u00E9connect\u00E9e
 wizard.send_invitations.send_success=Invitation envoy\u00E9e
 wizard.send_invitations.send_success_info=Exp\u00E9dition de l'invitation r\u00E9ussie.
