--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -1279,8 +1279,8 @@ wizard.send_invitations.never_untrusted=Non dare mai i tuoi file di invito a per
 wizard.send_invitations.over_powerfolder=Via PowerFolder ora
 wizard.send_invitations.save_to_file=Salva come file
 wizard.send_invitations.send_by_mail=Invia per email
-wizard.send_invitations.send_invitation=Invia invito
-wizard.send_invitations.title=Salva un invito
+wizard.send_invitations.title=Invia invito
+wizard.send_invitations.select=Salva un invito
 wizard.send_invitations.offline=Non connesso
 wizard.send_invitations.send_success=Invito spedito
 wizard.send_invitations.send_success_info=L'invito \u00E8 stato mandato con successo.
