--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -1276,8 +1276,8 @@ wizard.send_invitations.never_untrusted=\u4FE1\u983C\u3067\u304D\u306A\u3044\u4E
 wizard.send_invitations.over_powerfolder=PowerFolder \u3092\u901A\u3058\u3066\u76F4\u3061\u306B
 wizard.send_invitations.save_to_file=\u540D\u524D\u3092\u4ED8\u3051\u3066\u4FDD\u5B58
 wizard.send_invitations.send_by_mail=\u30E1\u30FC\u30EB\u3067\u9001\u308B
-wizard.send_invitations.send_invitation=\u62DB\u5F85\u72B6\u306E\u9001\u4ED8
-wizard.send_invitations.title=\u62DB\u5F85\u72B6\u306E\u4FDD\u5B58
+wizard.send_invitations.title=\u62DB\u5F85\u72B6\u306E\u9001\u4ED8
+wizard.send_invitations.select=\u62DB\u5F85\u72B6\u306E\u4FDD\u5B58
 wizard.send_invitations.offline=\u672A\u63A5\u7D9A
 wizard.send_invitations.send_success=\u62DB\u5F85\u72B6\u306E\u9001\u4ED8\u5B8C\u4E86
 wizard.send_invitations.send_success_info=\u62DB\u5F85\u72B6\u306E\u9001\u4ED8\u306B\u6210\u529F\u3057\u307E\u3057\u305F\u3002
