--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -1279,8 +1279,8 @@ wizard.send_invitations.never_untrusted=Geef invitatie bestanden nooit aan perso
 wizard.send_invitations.over_powerfolder=Via PowerFolder Nu
 wizard.send_invitations.save_to_file=Opslaan als bestand
 wizard.send_invitations.send_by_mail=Verzend per e-mail
-wizard.send_invitations.send_invitation=Verzend invitatie
-wizard.send_invitations.title=Sla een invitatie op
+wizard.send_invitations.title=Verzend invitatie
+wizard.send_invitations.select=Sla een invitatie op
 wizard.send_invitations.offline=Niet verbonden
 wizard.send_invitations.send_success=Invitatie verzonden
 wizard.send_invitations.send_success_info=U heeft de invitatie succesvol verzonden.
