--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -1279,8 +1279,8 @@ wizard.send_invitations.never_untrusted=Nigdy nie dawaj swoich plik\u00f3w zapro
 wizard.send_invitations.over_powerfolder=Przez PowerFolder
 wizard.send_invitations.save_to_file=Zapisz jako plik
 wizard.send_invitations.send_by_mail=Wy\u015blij poczt\u0105
-wizard.send_invitations.send_invitation=Wy\u015blij zaproszenie
-wizard.send_invitations.title=Zapisz zaproszenie
+wizard.send_invitations.title=Wy\u015blij zaproszenie
+wizard.send_invitations.select=Zapisz zaproszenie
 wizard.send_invitations.offline=Nie po\u0142\u0105czony
 wizard.send_invitations.send_success=Zaproszenie wys\u0142ane
 wizard.send_invitations.send_success_info=Pomy\u015blnie wys\u0142ano zaproszenie
