--- a/src/etc/Translation_pt.properties
+++ b/src/etc/Translation_pt.properties
@@ -1114,11 +1114,11 @@ wizard.send_invitations.offline=Offline
 wizard.send_invitations.overpf=Via PowerFolder agora
 wizard.send_invitations.savetofile=Salvar como arquivo
 wizard.send_invitations.sendbymail=Enviar por email
-wizard.send_invitations.send_invitation=Enviar convite
+wizard.send_invitations.title=Enviar convite
 wizard.send_invitations.send_success=Convite enviado
 wizard.send_invitations.send_success_info=Voc\u00ea enviou o convite com sucesso.
-wizard.send_invitations.title=Salvar convite
-wizard.send_invitations.send_invitation=
+wizard.send_invitations.select=Salvar convite
+wizard.send_invitations.title=
 wizard.send_invitations.join=Arquivos de convite s\u00e3o necess\u00e1rios para juntar-se a uma pasta
 wizard.send_invitations.never_untrusted=Nunca forne\u00e7a seus arquivos de convite para deconhecidos.
 wizard.send_invitations.invitation_text=Digite uma mensagem para o destinat\u00e1rio
