--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -1279,8 +1279,8 @@ wizard.send_invitations.never_untrusted=Ge aldrig ut inbjudningsfiler till n\u00
 wizard.send_invitations.over_powerfolder=Via PowerFolder nu
 wizard.send_invitations.save_to_file=Spara som en fil
 wizard.send_invitations.send_by_mail=Skicka med e-post
-wizard.send_invitations.send_invitation=Skicka inbjudan
-wizard.send_invitations.title=Spara inbjudan
+wizard.send_invitations.title=Skicka inbjudan
+wizard.send_invitations.select=Spara inbjudan
 wizard.send_invitations.offline=Ej ansluten
 wizard.send_invitations.send_success=Inbjudan skickad
 wizard.send_invitations.send_success_info=Du lyckades s\u00e4nda iv\u00e4g inbjudan.
