--- a/src/etc/Translation_ar.properties
+++ b/src/etc/Translation_ar.properties
@@ -1279,8 +1279,8 @@ wizard.send_invitations.never_untrusted=\u0644\u0627\u062a\u0642\u0645 \u0628\u0
 wizard.send_invitations.over_powerfolder=\u0639\u0628\u0631 PowerFolder \u0627\u0644\u0627\u0646
 wizard.send_invitations.save_to_file=\u062d\u0641\u0638 \u0627\u0644\u0645\u0644\u0641 \u0628\u0627\u0633\u0645
 wizard.send_invitations.send_by_mail=\u0627\u0631\u0633\u0644 \u0639\u0628\u0631 \u0627\u0644\u0628\u0631\u064a\u062f \u0627\u0644\u0627\u0644\u0643\u062a\u0631\u0648\u0646\u064a
-wizard.send_invitations.send_invitation=\u0627\u0631\u0633\u0644 \u062f\u0639\u0648\u0629
-wizard.send_invitations.title=\u0627\u062d\u0641\u0638 \u0627\u0644\u062f\u0639\u0648\u0629
+wizard.send_invitations.title=\u0627\u0631\u0633\u0644 \u062f\u0639\u0648\u0629
+wizard.send_invitations.select=\u0627\u062d\u0641\u0638 \u0627\u0644\u062f\u0639\u0648\u0629
 wizard.send_invitations.offline=\u063a\u064a\u0631 \u0645\u062a\u0635\u0644
 wizard.send_invitations.send_success=\u062a\u0645 \u0627\u0631\u0633\u0627\u0644 \u0627\u0644\u062f\u0639\u0648\u0629
 wizard.send_invitations.send_success_info=\u0644\u0642\u062f \u0642\u0645\u062a \u0628\u0646\u062c\u0627\u062d \u0628\u0627\u0631\u0633\u0627\u0644 \u062f\u0639\u0648\u0629 .
