--- a/src/etc/Translation_ru.properties
+++ b/src/etc/Translation_ru.properties
@@ -1279,8 +1279,8 @@ wizard.send_invitations.never_untrusted=\u041D\u0438\u043A\u043E\u0433\u0434\u04
 wizard.send_invitations.over_powerfolder=\u0427\u0435\u0440\u0435\u0437 PowerFolder \u0441\u0435\u0439\u0447\u0430\u0441
 wizard.send_invitations.save_to_file=\u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C \u043A\u0430\u043A \u0444\u0430\u0439\u043B
 wizard.send_invitations.send_by_mail=\u041F\u043E\u0441\u043B\u0430\u0442\u044C \u043D\u0430 \u043F\u043E\u0447\u0442\u0443
-wizard.send_invitations.send_invitation=\u041F\u043E\u0441\u043B\u0430\u0442\u044C \u043F\u0440\u0438\u0433\u043B\u0430\u0448\u0435\u043D\u0438\u0435
-wizard.send_invitations.title=\u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C \u043F\u0440\u0438\u0433\u043B\u0430\u0448\u0435\u043D\u0438\u0435
+wizard.send_invitations.title=\u041F\u043E\u0441\u043B\u0430\u0442\u044C \u043F\u0440\u0438\u0433\u043B\u0430\u0448\u0435\u043D\u0438\u0435
+wizard.send_invitations.select=\u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C \u043F\u0440\u0438\u0433\u043B\u0430\u0448\u0435\u043D\u0438\u0435
 wizard.send_invitations.offline=\u041D\u0435 \u043F\u0440\u0438\u0441\u043E\u0435\u0434\u0438\u043D\u0435\u043D
 wizard.send_invitations.send_success=\u041F\u0440\u0438\u0433\u043B\u0430\u0448\u0435\u043D\u0438\u0435 \u043E\u0442\u043F\u0440\u0430\u0432\u043B\u0435\u043D\u043E
 wizard.send_invitations.send_success_info=\u0412\u044B \u0443\u0441\u043F\u0435\u0448\u043D\u043E \u043E\u0442\u043F\u0440\u0430\u0432\u0438\u043B\u0438 \u043F\u0440\u0438\u0433\u043B\u0430\u0448\u0435\u043D\u0438\u0435.
