--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -1278,8 +1278,8 @@ wizard.send_invitations.never_untrusted=\u4ece\u4e0d\u7ed9\u4e0d\u4fe1\u4efb\u76
 wizard.send_invitations.over_powerfolder=\u9a6c\u4e0a\u4f7f\u7528PowerFolder
 wizard.send_invitations.save_to_file=\u53e6\u5b58\u4e3a\u6587\u4ef6
 wizard.send_invitations.send_by_mail=\u901a\u8fc7\u90ae\u4ef6\u53d1\u9001
-wizard.send_invitations.send_invitation=\u53d1\u9001\u9080\u8bf7
-wizard.send_invitations.title=\u4fdd\u5b58\u9080\u8bf7
+wizard.send_invitations.title=\u53d1\u9001\u9080\u8bf7
+wizard.send_invitations.select=\u4fdd\u5b58\u9080\u8bf7
 wizard.send_invitations.offline=\u672a\u8fde\u63a5
 wizard.send_invitations.send_success=\u9080\u8bf7\u53d1\u9001\u6210\u529f
 wizard.send_invitations.send_success_info=\u60a8\u5df2\u7ecf\u6210\u529f\u53d1\u9001\u9080\u8bf7\u3002
