--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -84,6 +84,7 @@ un_mark.key=N
 un_mark.name=Neu-Markierung entfernen
 
 
+wizard.login_online_storage.connecting=Verbinde...
 dialog.update_check.downloadAndUpdateSilent=Update im Hintergrund
 general.reject=Ablehnen
 online_storage_change_account.name=Ändern
