--- a/src/etc/ReleaseNotes.txt
+++ b/src/etc/ReleaseNotes.txt
@@ -5,12 +5,12 @@ New features and improvements:
    (http://www.powerfolder.com/wiki/Network_ID).
  * Simplified connection setup to custom server
    (http://www.powerfolder.com/wiki/Server_client_deployment).
- * Does not longer initially loads nodes file from PowerFolder website
+ * Does not longer initially load nodes file from PowerFolder website
    for Internet use.
  * Added support for direct UDT high speed connections.
  * Added log level network tuning options
    (http://www.powerfolder.com/wiki/Low_level_network_settings).
- * Several minor improvments. 
+ * Several minor improvements. 
 
 Bugfixes:
  * Fixes auto start problem, that caused PowerFolder to start twice.
