--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -53,6 +53,9 @@ folder_panel.home_tab.move_error.title=Fehler beim Verschieben
 folder_panel.settings_tab.add_patterns.text_1=Die folgende Ausschlüsse werden hinzugefügt
 folder_panel.settings_tab.add_patterns.title=Dateien ausschließen
 
+settings_tab.download_script=Script nach Download
+settings_tab.download_script.select=Auswählen
+
 invitation.utils.unable.write.text=Fehler beim Schreiben der Einladung, Versuchen Sie es erneut
 invitation.utils.unable.write.title=Fehler beim Schreiben
 
