--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -464,6 +464,8 @@ folder_panel.settings_tab.title=Param\u00E8tres
 folder_panel.settings_tab.userecyclebin=Utiliser la corbeille
 folder_panel.settings_tab.white_list.message=Seuls les fichiers conformes \u00E0 la liste blanche des formes de filtrage seront synchronis\u00E9es.
 folder_panel.settings_tab.white_list.title=liste blanche des formes de filtrage
+settings_tab.download_script=Script après le téléchargement
+settings_tab.download_script.select=S\u00e9lectionner
 
 folder_repository.continue_previewing=Poursuivre la pr\u00E9isualisation
 folder_repository.join_folder=Rejoindre le dossier
