rename 'quick info' entries

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -407,10 +407,10 @@ preferences.dialog.verbose=Debug logging aktivieren
 preferences.dialog.warnningMessage=Warnung
 preview_folder_remove.dialog.text=PowerFolder {0} entfernen?
 preview_folder_remove.dialog.title=PowerFolder {0} entfernen?
-quickinfo.my_folders.in_sync_all=Alle PowerFolder sind synchronisiert
-quickinfo.my_folders.powerfolders={0} in {1} PowerFolder
-quickinfo.my_folders.syncing=Synchronisiere {0} PowerFolder
-quickinfo.my_folders.title=\u00dcbersicht meiner PowerFolder
+check_status.in_sync_all=Alle PowerFolder sind synchronisiert
+check_status.powerfolders={0} in {1} PowerFolder
+check_status.syncing=Synchronisiere {0} PowerFolder
+check_status.title=\u00dcbersicht meiner PowerFolder
 remove_pattern.dont=Nicht entfernen
 remove_pattern.prompt='{0}' wird entfernt.
 remove_pattern.remove=Entfernen
