--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -419,11 +419,10 @@ preferences.dialog.verbose=Habilitar anotaciones de rastreo (debug)
 preferences.dialog.warnningMessage=Advertencia
 preview_folder_remove.dialog.text=Remover PowerFolder {0}?
 preview_folder_remove.dialog.title=Remover PowerFolder {0}?
-quickinfo.my_folders.in_sync_all=Todos los PowerFolders han sido sincronizados
-quickinfo.my_folders.powerfolders={0} en {1} PowerFolder(s)
-quickinfo.my_folders.syncing=Sincronizando {0} PowerFolder(s)
-quickinfo.my_folders.title=Estado de mis PowerFolders
-quickinfo.webservice.folders_mirrored={0} de {1} carpetas son respaldadas. {2} espacio en linea utilizado..
+check_status.in_sync_all=Todos los PowerFolders han sido sincronizados
+check_status.powerfolders={0} en {1} PowerFolder(s)
+check_status.syncing=Sincronizando {0} PowerFolder(s)
+check_status.title=Estado de mis PowerFolders
 remove_pattern.dont=No remover
 remove_pattern.prompt=Patr\u00F3n '{0}' ser\u00E1 removido.
 remove_pattern.remove=Remover
