--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -419,11 +419,10 @@ preferences.dialog.verbose=Activer l'enregistrement complet des \u00E9v\u00E9nem
 preferences.dialog.warnningMessage=Attention
 preview_folder_remove.dialog.text=Enlever le dossier PowerFolder {0}?
 preview_folder_remove.dialog.title=Enlever le dossier PowerFolder {0}?
-quickinfo.my_folders.in_sync_all=Tous les dossiers PowerFolder sont synchronis\u00E9s
-quickinfo.my_folders.powerfolders={0} dans {1} dossier(s) PowerFolder
-quickinfo.my_folders.syncing=Synchronisation de {0} dossier(s) PowerFolder
-quickinfo.my_folders.title=Statut de mon PowerFolder
-quickinfo.webservice.folders_mirrored={0} de {1} dossier(s) ont \u00E9t\u00E9 sauvegard\u00E9(s). {2} d'espace en ligne utilis\u00E9.
+check_status.in_sync_all=Tous les dossiers PowerFolder sont synchronis\u00E9s
+check_status.powerfolders={0} dans {1} dossier(s) PowerFolder
+check_status.syncing=Synchronisation de {0} dossier(s) PowerFolder
+check_status.title=Statut de mon PowerFolder
 remove_pattern.dont=Ne pas enlever
 remove_pattern.prompt=La forme de filtrage '{0}' sera retir\u00E9e.
 remove_pattern.remove=Enlever
