--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -417,11 +417,10 @@ preferences.dialog.verbose=Abilita il logging dettagliato
 preferences.dialog.warnningMessage=Attenzione
 preview_folder_remove.dialog.text=Rimuovere PowerFolder {0}?
 preview_folder_remove.dialog.title=Rimuovere PowerFolder {0}?
-quickinfo.my_folders.in_sync_all=Tutti i PowerFolders sono stati sincronizzati
-quickinfo.my_folders.powerfolders={0} in {1} PowerFolder(s)
-quickinfo.my_folders.syncing=Sincronizzazione di {0} PowerFolder(s)
-quickinfo.my_folders.title=Stato dei miei PowerFolders
-quickinfo.webservice.folders_mirrored={0} cartella su {1} \u00E8 stata salvata. {2} spazi online utilizzati.
+check_status.in_sync_all=Tutti i PowerFolders sono stati sincronizzati
+check_status.powerfolders={0} in {1} PowerFolder(s)
+check_status.syncing=Sincronizzazione di {0} PowerFolder(s)
+check_status.title=Stato dei miei PowerFolders
 remove_pattern.dont=Non rimuovere
 remove_pattern.prompt=Il pattern '{0}' sar\u00E0 rimosso.
 remove_pattern.remove=Rimuovere
