--- a/src/etc/Translation_pt.properties
+++ b/src/etc/Translation_pt.properties
@@ -314,9 +314,8 @@ preferences.dialog.verbose=Habilitar registro de depura\u00e7\u00e3o
 preferences.dialog.warnningMessage=Aviso
 preview_folder_remove.dialog.text=Remover pasta PowerFolder {0}?
 preview_folder_remove.dialog.title=Remover pasta PowerFolder {0}?
-quickinfo.my_folders.syncing=Sincronizando {0}
-quickinfo.my_folders.title=Estado de minhas pastas PowerFolder
-quickinfo.webservice.folders_mirrored={0} de {1} pasta(s) foram copiadas
+check_status.syncing=Sincronizando {0}
+check_status.title=Estado de minhas pastas PowerFolder
 remove_pattern.dont=N\u00e3o Remover
 remove_pattern.prompt=Filtros '{0}' ser\u00e3o removidos.
 remove_pattern.remove=Remover
