--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -419,11 +419,10 @@ preferences.dialog.verbose=\u542f\u7528\u957f\u65e5\u5fd7
 preferences.dialog.warnningMessage=\u8b66\u544a
 preview_folder_remove.dialog.text=\u79fb\u9664PowerFolder {0}?
 preview_folder_remove.dialog.title=\u79fb\u9664PowerFolder {0}?
-quickinfo.my_folders.in_sync_all=\u6240\u6709\u7684PowerFolder\u90fd\u5df2\u7ecf\u540c\u6b65
-quickinfo.my_folders.powerfolders= {1} \u4e2aPowerFolder\u4e2d\u7684 {0} \u4e2a
-quickinfo.my_folders.syncing=\u6b63\u5728\u540c\u6b65 {0} \u4e2aPowerFolder
-quickinfo.my_folders.title=\u6211\u7684PowerFolder\u7684\u72b6\u6001
-quickinfo.webservice.folders_mirrored={1} \u4e2a\u6587\u4ef6\u5939\u4e2d\u7684 {0} \u4e2a\u88ab\u5907\u4efd\u3002\u4f7f\u7528 {2} \u5728\u7ebf\u7a7a\u95f4\u3002
+check_status.in_sync_all=\u6240\u6709\u7684PowerFolder\u90fd\u5df2\u7ecf\u540c\u6b65
+check_status.powerfolders= {1} \u4e2aPowerFolder\u4e2d\u7684 {0} \u4e2a
+check_status.syncing=\u6b63\u5728\u540c\u6b65 {0} \u4e2aPowerFolder
+check_status.title=\u6211\u7684PowerFolder\u7684\u72b6\u6001
 remove_pattern.dont=\u4e0d\u8981\u5220\u9664
 remove_pattern.prompt=\u6837\u5f0f '{0}' \u5c06\u88ab\u5220\u9664
 remove_pattern.remove=\u5220\u9664
