--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -417,11 +417,10 @@ preferences.dialog.verbose=\u8A73\u7D30\u306A\u30ED\u30B0\u3092\u53D6\u308B
 preferences.dialog.warnningMessage=\u8B66\u544A
 preview_folder_remove.dialog.text=\u30D1\u30EF\u30FC\u30D5\u30A9\u30EB\u30C0 {0} \u3092\u524A\u9664\uFF1F
 preview_folder_remove.dialog.title=\u30D1\u30EF\u30FC\u30D5\u30A9\u30EB\u30C0 {0} \u3092\u524A\u9664\uFF1F
-quickinfo.my_folders.in_sync_all=\u5168\u30D1\u30EF\u30FC\u30D5\u30A9\u30EB\u30C0\u540C\u671F\u6E08\u307F
-quickinfo.my_folders.powerfolders={1} \u30D1\u30EF\u30FC\u30D5\u30A9\u30EB\u30C0\u4E2D {0}
-quickinfo.my_folders.syncing=\u30D1\u30EF\u30FC\u30D5\u30A9\u30EB\u30C0\u540C\u671F\u4E2D {0}
-quickinfo.my_folders.title=\u30DE\u30A4 \u30D1\u30EF\u30FC\u30D5\u30A9\u30EB\u30C0\u306E\u72B6\u614B
-quickinfo.webservice.folders_mirrored={1} \u4E2D {0} \u30D5\u30A9\u30EB\u30C0\u3092\u30D0\u30C3\u30AF\u30A2\u30C3\u30D7\u3001{2} \u30AA\u30F3\u30E9\u30A4\u30F3\u30B9\u30DA\u30FC\u30B9\u4F7F\u7528
+check_status.in_sync_all=\u5168\u30D1\u30EF\u30FC\u30D5\u30A9\u30EB\u30C0\u540C\u671F\u6E08\u307F
+check_status.powerfolders={1} \u30D1\u30EF\u30FC\u30D5\u30A9\u30EB\u30C0\u4E2D {0}
+check_status.syncing=\u30D1\u30EF\u30FC\u30D5\u30A9\u30EB\u30C0\u540C\u671F\u4E2D {0}
+check_status.title=\u30DE\u30A4 \u30D1\u30EF\u30FC\u30D5\u30A9\u30EB\u30C0\u306E\u72B6\u614B
 remove_pattern.dont=\u524A\u9664\u3057\u306A\u3044
 remove_pattern.prompt='{0}' \u30D1\u30BF\u30FC\u30F3\u306F\u524A\u9664\u3055\u308C\u307E\u3059\u3002
 remove_pattern.remove=\u524A\u9664
