--- a/src/etc/Translation_ru.properties
+++ b/src/etc/Translation_ru.properties
@@ -418,11 +418,10 @@ preferences.dialog.verbose=\u0412\u043A\u043B\u044E\u0447\u0438\u0442\u044C \u04
 preferences.dialog.warnningMessage=\u041F\u0440\u0435\u0434\u0443\u043F\u0440\u0435\u0436\u0434\u0435\u043D\u0438\u0435
 preview_folder_remove.dialog.text=\u0423\u0434\u0430\u043B\u0438\u0442\u044C \u043F\u0430\u043F\u043A\u0443 PowerFolder {0}?
 preview_folder_remove.dialog.title=\u0423\u0434\u0430\u043B\u0438\u0442\u044C \u043F\u0430\u043F\u043A\u0443 PowerFolder {0}?
-quickinfo.my_folders.in_sync_all=\u0412\u0441\u0435 \u043F\u0430\u043F\u043A\u0438 PowerFolder \u0441\u0438\u043D\u0445\u0440\u043E\u043D\u0438\u0437\u0438\u0440\u043E\u0432\u0430\u043D\u044B
-quickinfo.my_folders.powerfolders={0} \u0432 {1} \u043F\u0430\u043F\u043A\u0435(\u0430\u0445) PowerFolder
-quickinfo.my_folders.syncing=\u0421\u0438\u043D\u0445\u0440\u043E\u043D\u0438\u0437\u0438\u0440\u0443\u044E {0} \u043F\u0430\u043F\u043A\u0443(\u0438) PowerFolder
-quickinfo.my_folders.title=\u0421\u043E\u0441\u0442\u043E\u044F\u043D\u0438\u0435 \u043C\u043E\u0438\u0445 PowerFolder \u043F\u0430\u043F\u043E\u043A
-quickinfo.webservice.folders_mirrored={0} \u0438\u0437 {1} \u043F\u0430\u043F\u043E\u043A \u0432\u043E\u0441\u0441\u0442\u0430\u043D\u043E\u0432\u043B\u0435\u043D\u044B. {2} \u043E\u043D\u043B\u0430\u0439\u043D \u043C\u0435\u0441\u0442\u0430 \u0438\u0441\u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u043D\u043E.
+check_status.in_sync_all=\u0412\u0441\u0435 \u043F\u0430\u043F\u043A\u0438 PowerFolder \u0441\u0438\u043D\u0445\u0440\u043E\u043D\u0438\u0437\u0438\u0440\u043E\u0432\u0430\u043D\u044B
+check_status.powerfolders={0} \u0432 {1} \u043F\u0430\u043F\u043A\u0435(\u0430\u0445) PowerFolder
+check_status.syncing=\u0421\u0438\u043D\u0445\u0440\u043E\u043D\u0438\u0437\u0438\u0440\u0443\u044E {0} \u043F\u0430\u043F\u043A\u0443(\u0438) PowerFolder
+check_status.title=\u0421\u043E\u0441\u0442\u043E\u044F\u043D\u0438\u0435 \u043C\u043E\u0438\u0445 PowerFolder \u043F\u0430\u043F\u043E\u043A
 remove_pattern.dont=\u041D\u0435 \u0443\u0434\u0430\u043B\u044F\u0442\u044C
 remove_pattern.prompt=\u0428\u0430\u0431\u043B\u043E\u043D '{0}' \u0431\u0443\u0434\u0435\u0442 \u0443\u0434\u0430\u043B\u0435\u043D.
 remove_pattern.remove=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
