--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -233,7 +233,7 @@ general.folder=Folder
 general.folder_name=Name
 general.friday=Freitag
 general.hours=Stunden
-general.invitor=Von
+general.inviter=Von
 general.lan_only=Nur LAN
 general.local_copy_at=Lokaler Speicherort
 general.localized_date_format=MMMM dd. yyyy
@@ -430,8 +430,8 @@ status.upload=%.2f KB/s
 status_bar.status_change.connected=PowerFolder ist verbunden
 status_bar.status_change.disabled=PowerFolder ist abgeschaltet
 status_bar.status_change.title=Verbindungsstatus
-synchronisation.notice.title=Transfer Modus {0} eingestellt
-synchronisation.warning.automatic_deletions_notice=Dieser Modus synchronisiert auch Dateil\u00f6schungen\!
+synchronization.notice.title=Transfer Modus {0} eingestellt
+synchronization.warning.automatic_deletions_notice=Dieser Modus synchronisiert auch Dateil\u00f6schungen\!
 systray.exit=Beenden
 systray.hide=Verstecken
 systray.powerfolder=PowerFolder v{0}
