--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -773,7 +773,7 @@ general.folder=Folder
 general.folder_name=Name
 general.friday=Friday
 general.hours=Hour(s)
-general.invitor=Invitor
+general.inviter=Invitor
 general.lan_only=LAN only
 general.local_copy_at=Local copy at
 general.localized_date_format=MMMM dd yyyy
@@ -1156,8 +1156,8 @@ status_bar.no_sleep.tips=Enable folder change scanning
 status_bar.poor_quality_warning.title=Poor connection quality
 status_bar.poor_quality_warning.text=*** TOT, What do we want to say here? ***
 
-synchronisation.notice.title=Activated transfer mode {0}
-synchronisation.warning.automatic_deletions_notice=This mode will also synchronize file deletions\!
+synchronization.notice.title=Activated transfer mode {0}
+synchronization.warning.automatic_deletions_notice=This mode will also synchronize file deletions\!
 
 system_monitor.cpu_usage=CPU Usage:
 system_monitor.heap_usage=Heap Usage:
