--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -226,7 +226,7 @@ general.folder=Carpeta
 general.folder_name=Nombre
 general.friday=Viernes
 general.hours=Hora(s)
-general.invitor=Invitador
+general.inviter=Invitador
 general.lan_only=LAN solamente
 general.local_copy_at=Copia local en
 general.localized_date_format=MMMM dd. yyyy (M\:M\u00E9s d\:d\u00EDa y\:a\u00F1o)
@@ -439,8 +439,8 @@ status.upload=%.2f KB/s
 status_bar.status_change.connected=PowerFolder conectado
 status_bar.status_change.disabled=El PowerFolder desactivado
 status_bar.status_change.title=Estado de Conecci\u00F3n
-synchronisation.notice.title=Perfil de sincronizacion activado {0}
-synchronisation.warning.automatic_deletions_notice=Este modo tambien sincroniza borrado de archivos\!
+synchronization.notice.title=Perfil de sincronizacion activado {0}
+synchronization.warning.automatic_deletions_notice=Este modo tambien sincroniza borrado de archivos\!
 systray.exit=Salir
 systray.hide=Ocultar
 systray.powerfolder=PowerFolder v{0}
