--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -226,7 +226,7 @@ general.folder=Dossier(s) partag\u00E9(s)
 general.folder_name=Nom
 general.friday=Vendredi
 general.hours=Heure(s)
-general.invitor=Inviteur
+general.inviter=Inviteur
 general.lan_only=LAN uniquement
 general.local_copy_at=Emplacement du dossier \u00E0 partager
 general.localized_date_format=MMMM dd. yyyy
@@ -441,8 +441,8 @@ status.upload=%.2f Ko/s
 status_bar.status_change.connected=PowerFolder est connect\u00E9
 status_bar.status_change.disabled=PowerFolder est inactif
 status_bar.status_change.title=Etat de la connexion
-synchronisation.notice.title=Activation du profil de synchronisation {0}
-synchronisation.warning.automatic_deletions_notice=ATTENTION \: Ce mode synchronise les fichiers effac\u00E9s du dossier partag\u00E9 \n(efface donc les autres sources) \!
+synchronization.notice.title=Activation du profil de synchronisation {0}
+synchronization.warning.automatic_deletions_notice=ATTENTION \: Ce mode synchronise les fichiers effac\u00E9s du dossier partag\u00E9 \n(efface donc les autres sources) \!
 systray.exit=Quitter
 systray.hide=Mettre en cache
 systray.powerfolder=PowerFolder v{0}
