--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -226,7 +226,7 @@ general.folder=Cartella
 general.folder_name=Nome
 general.friday=Venerd\u00EC
 general.hours=Ora(e)
-general.invitor=Invitante
+general.inviter=Invitante
 general.lan_only=solo LAN
 general.local_copy_at=Copia locale a
 general.localized_date_format=MMMM dd. yyyy
@@ -437,8 +437,8 @@ status.upload=%.2f KB/s
 status_bar.status_change.connected=PowerFolder \u00E8 connesso
 status_bar.status_change.disabled=PowerFolder \u00E8 disabilitato
 status_bar.status_change.title=Stato di connessione
-synchronisation.notice.title=Profilo si sincronizzazione {0} attivato
-synchronisation.warning.automatic_deletions_notice=Questa modalit\u00E0 sincronizzer\u00E0 anche le cancellazioni di file\!
+synchronization.notice.title=Profilo si sincronizzazione {0} attivato
+synchronization.warning.automatic_deletions_notice=Questa modalit\u00E0 sincronizzer\u00E0 anche le cancellazioni di file\!
 systray.exit=Esci
 systray.hide=Nascondi
 systray.powerfolder=PowerFolder v{0}
