--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -253,8 +253,8 @@ send_invitation.placetostore=Kies een plek om de invitatie op te slaan
 send_invitation.subject=Invitatie voor een PowerFolder\: {0}
 status.download=%.2f KB/s
 status.upload=%.2f KB/s
-synchronisation.notice.title=Gekozen synchronisatieprofiel {0}
-synchronisation.warning.automatic_deletions_notice=Deze mode zal ook bestand verwijderingen synchroniseren\!
+synchronization.notice.title=Gekozen synchronisatieprofiel {0}
+synchronization.warning.automatic_deletions_notice=Deze mode zal ook bestand verwijderingen synchroniseren\!
 systray.exit=Exit
 systray.hide=Verberg
 systray.powerfolder=PowerFolder v{0}
