--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -302,8 +302,8 @@ send_invitation.placetostore=Wybierz miejsce, w kt\u00f3rym chcesz zachowa\u0107
 send_invitation.subject=Zaproszenie do PowerFolder '{0}'
 status.download=%.2f KB/s
 status.upload=%.2f KB/s
-synchronisation.notice.title=Profil synchronizacji {0} zosta\u0142 aktywowany
-synchronisation.warning.automatic_deletions_notice=Ten tryb tak\u017ce b\u0119dzie synchronizowa\u0142 usuwanie plik\u00f3w\!
+synchronization.notice.title=Profil synchronizacji {0} zosta\u0142 aktywowany
+synchronization.warning.automatic_deletions_notice=Ten tryb tak\u017ce b\u0119dzie synchronizowa\u0142 usuwanie plik\u00f3w\!
 systray.exit=Wyj\u015bcie
 systray.hide=Schowaj
 systray.powerfolder=PowerFolder v{0}
