--- a/src/etc/Translation_pt.properties
+++ b/src/etc/Translation_pt.properties
@@ -140,7 +140,7 @@ general.folder=Pasta
 general.folder_name=Nome
 general.friday=Sexta-feira
 general.hours=Hora(s)
-general.invitor=Anfitri\u00e3o
+general.inviter=Anfitri\u00e3o
 general.local_copy_at=C\u00f3pia local em
 general.localized_date_format=dd MMMM yyyy
 general.localnet=Rede local
@@ -326,8 +326,8 @@ send_invitation.placetostore=Escolha um lugar para armazenar o convite
 send_invitation.subject=Convite para a pasta PowerFolder '{0}'
 status.download=%.2f KB/s
 status.upload=%.2f KB/s
-synchronisation.notice.title=Perfil de sincroniza\u00e7\u00e3o em uso {0}
-synchronisation.warning.automatic_deletions_notice=Este modo tamb\u00e9m sincronizar\u00e1 exclus\u00e3o de arquivos\!
+synchronization.notice.title=Perfil de sincroniza\u00e7\u00e3o em uso {0}
+synchronization.warning.automatic_deletions_notice=Este modo tamb\u00e9m sincronizar\u00e1 exclus\u00e3o de arquivos\!
 systray.exit=Sair
 systray.hide=Esconder
 systray.powerfolder=PowerFolder v{0}
