--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -238,8 +238,8 @@ send_invitation.placetostore=V\u00e4lj plats f\u00f6r att spara inbjudan
 send_invitation.subject=Inbjudan till PowerFolder '{0}'
 status.download=%.2f KB/s
 status.upload=%.2f KB/s
-synchronisation.notice.title=Aktiverad synkronisationsprofile {0}
-synchronisation.warning.automatic_deletions_notice=Denna mod synkroniserar \u00e4ven filborttagningar\!
+synchronization.notice.title=Aktiverad synkronisationsprofile {0}
+synchronization.warning.automatic_deletions_notice=Denna mod synkroniserar \u00e4ven filborttagningar\!
 systray.exit=Avsluta
 systray.hide=G\u00f6m
 systray.powerfolder=PowerFolder v{0}
