--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -226,7 +226,7 @@ general.folder=\u6587\u4ef6\u5939
 general.folder_name=\u540d\u79f0
 general.friday=\u661f\u671f\u4e94
 general.hours=\u5c0f\u65f6
-general.invitor=\u9080\u8bf7\u8005
+general.inviter=\u9080\u8bf7\u8005
 general.lan_only=\u53ea\u5bf9\u5c40\u57df\u7f51
 general.local_copy_at=\u672c\u5730\u526f\u672c
 general.localized_date_format=MMMM dd. yyyy
@@ -439,8 +439,8 @@ status.upload=%.2f KB/\u79d2
 status_bar.status_change.connected=PowerFolder\u5df2\u7ecf\u8fde\u63a5
 status_bar.status_change.disabled=PowerFolder\u5df2\u7ecf\u7981\u7528
 status_bar.status_change.title=\u8fde\u63a5\u72b6\u6001
-synchronisation.notice.title=\u6fc0\u6d3b\u540c\u6b65\u9009\u9879 {0}
-synchronisation.warning.automatic_deletions_notice=\u6b64\u6a21\u5f0f\u4e5f\u4f1a\u540c\u6b65\u5220\u9664\u6587\u4ef6\uff01
+synchronization.notice.title=\u6fc0\u6d3b\u540c\u6b65\u9009\u9879 {0}
+synchronization.warning.automatic_deletions_notice=\u6b64\u6a21\u5f0f\u4e5f\u4f1a\u540c\u6b65\u5220\u9664\u6587\u4ef6\uff01
 systray.exit=\u9000\u51fa
 systray.hide=\u9690\u85cf
 systray.powerfolder=PowerFolder v{0}
