--- a/src/etc/Translation_ar.properties
+++ b/src/etc/Translation_ar.properties
@@ -276,8 +276,8 @@ send_invitation.placetostore=\u0623\u062e\u062a\u0631 \u0645\u0643\u0627\u0646\u
 send_invitation.subject=\u062f\u0639\u0648\u0629 \u0625\u0644\u0649 PowerFolder '{0}'
 status.download=%.2f KB/s
 status.upload=%.2f KB/s
-synchronisation.notice.title=\u062a\u0641\u0639\u064a\u0644 \u0645\u0644\u0641 \u0627\u0644\u0645\u0632\u0627\u0645\u0646\u0629 {0}
-synchronisation.warning.automatic_deletions_notice=\u0647\u0630 \u0627\u0644\u0648\u0636\u0639 \u0633\u0648\u0641 \u064a\u0632\u0627\u0645\u0646 \u0623\u064a\u0636\u0627 \u0627\u0644\u0645\u0644\u0641\u0627\u062a \u0627\u0644\u0645\u062d\u0630\u0648\u0641\u0629\!
+synchronization.notice.title=\u062a\u0641\u0639\u064a\u0644 \u0645\u0644\u0641 \u0627\u0644\u0645\u0632\u0627\u0645\u0646\u0629 {0}
+synchronization.warning.automatic_deletions_notice=\u0647\u0630 \u0627\u0644\u0648\u0636\u0639 \u0633\u0648\u0641 \u064a\u0632\u0627\u0645\u0646 \u0623\u064a\u0636\u0627 \u0627\u0644\u0645\u0644\u0641\u0627\u062a \u0627\u0644\u0645\u062d\u0630\u0648\u0641\u0629\!
 systray.exit=\u062e\u0631\u0648\u062c
 systray.hide=\u0625\u062e\u0641\u0627\u0621
 systray.powerfolder=PowerFolder \u0646\u0633\u062e\u0629{0}
