--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -224,7 +224,7 @@ general.folder=\u30D5\u30A9\u30EB\u30C0
 general.folder_name=\u540D\u524D
 general.friday=\u91D1\u66DC\u65E5
 general.hours=\u6642\u9593
-general.invitor=\u62DB\u5F85\u4E3B
+general.inviter=\u62DB\u5F85\u4E3B
 general.lan_only=LAN \u9650\u5B9A
 general.local_copy_at=\u30ED\u30FC\u30AB\u30EB\u30B3\u30D4\u30FC\u306E\u5834\u6240
 general.localized_date_format=yyyy MMMM dd.
@@ -437,8 +437,8 @@ status.upload=%.2f KB/s
 status_bar.status_change.connected=PowerFolder \u306F\u63A5\u7D9A\u72B6\u614B\u3067\u3059
 status_bar.status_change.disabled=PowerFolder \u306F\u7121\u52B9\u72B6\u614B\u3067\u3059
 status_bar.status_change.title=\u63A5\u7D9A\u30B9\u30C6\u30FC\u30BF\u30B9
-synchronisation.notice.title={0} \u540C\u671F\u65B9\u5F0F\u306E\u6709\u52B9\u5316
-synchronisation.warning.automatic_deletions_notice=\u3053\u306E\u540C\u671F\u5F62\u5F0F\u3067\u306F\u30D5\u30A1\u30A4\u30EB\u524A\u9664\u3082\u540C\u671F\u3057\u307E\u3059\uFF01
+synchronization.notice.title={0} \u540C\u671F\u65B9\u5F0F\u306E\u6709\u52B9\u5316
+synchronization.warning.automatic_deletions_notice=\u3053\u306E\u540C\u671F\u5F62\u5F0F\u3067\u306F\u30D5\u30A1\u30A4\u30EB\u524A\u9664\u3082\u540C\u671F\u3057\u307E\u3059\uFF01
 systray.exit=\u7D42\u4E86
 systray.hide=\u96A0\u3059
 systray.powerfolder=PowerFolder v{0}
