--- a/src/etc/Translation_ru.properties
+++ b/src/etc/Translation_ru.properties
@@ -225,7 +225,7 @@ general.folder=\u041F\u0430\u043F\u043A\u0430
 general.folder_name=\u0418\u043C\u044F
 general.friday=\u041F\u044F\u0442\u043D\u0438\u0446\u0430
 general.hours=\u0427\u0430\u0441\u043E\u0432
-general.invitor=\u041F\u0440\u0438\u0433\u043B\u0430\u0441\u0438\u0432\u0448\u0438\u0439
+general.inviter=\u041F\u0440\u0438\u0433\u043B\u0430\u0441\u0438\u0432\u0448\u0438\u0439
 general.lan_only=\u0422\u043E\u043B\u044C\u043A\u043E \u043B\u043E\u043A\u0430\u043B\u044C\u043D\u0430\u044F \u0441\u0435\u0442\u044C LAN
 general.local_copy_at=\u041C\u0435\u0441\u0442\u043E \u0434\u043B\u044F \u0441\u043E\u0445\u0440\u0430\u043D\u0435\u043D\u0438\u044F
 general.localized_date_format=dd. MMMM yyyy
@@ -438,8 +438,8 @@ status.upload=%.2f \u041A\u0411/\u0441
 status_bar.status_change.connected=PowerFolder \u0441\u043E\u0435\u0434\u0438\u043D\u0435\u043D
 status_bar.status_change.disabled=PowerFolder \u043E\u0442\u043A\u043B\u044E\u0447\u0435\u043D
 status_bar.status_change.title=\u0421\u043E\u0441\u0442\u043E\u044F\u043D\u0438\u0435 \u0441\u043E\u0435\u0434\u0438\u043D\u0435\u043D\u0438\u044F
-synchronisation.notice.title=\u0410\u043A\u0442\u0438\u0432\u043D\u044B\u0439 \u043F\u0440\u043E\u0444\u0438\u043B\u044C \u0441\u0438\u043D\u0445\u0440\u043E\u043D\u0438\u0437\u0430\u0446\u0438\u0438 {0}
-synchronisation.warning.automatic_deletions_notice=\u042D\u0442\u043E\u0442 \u0440\u0435\u0436\u0438\u043C \u0442\u0430\u043A \u0436\u0435 \u0441\u0438\u043D\u0445\u0440\u043E\u043D\u0438\u0437\u0438\u0440\u0443\u0435\u0442 \u0443\u0434\u0430\u043B\u0435\u043D\u0438\u044F\!
+synchronization.notice.title=\u0410\u043A\u0442\u0438\u0432\u043D\u044B\u0439 \u043F\u0440\u043E\u0444\u0438\u043B\u044C \u0441\u0438\u043D\u0445\u0440\u043E\u043D\u0438\u0437\u0430\u0446\u0438\u0438 {0}
+synchronization.warning.automatic_deletions_notice=\u042D\u0442\u043E\u0442 \u0440\u0435\u0436\u0438\u043C \u0442\u0430\u043A \u0436\u0435 \u0441\u0438\u043D\u0445\u0440\u043E\u043D\u0438\u0437\u0438\u0440\u0443\u0435\u0442 \u0443\u0434\u0430\u043B\u0435\u043D\u0438\u044F\!
 systray.exit=\u0417\u0430\u0432\u0435\u0440\u0448\u0438\u0442\u044C
 systray.hide=\u0421\u043A\u0440\u044B\u0442\u044C
 systray.powerfolder=PowerFolder v{0}
