--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -1317,7 +1317,7 @@ wizard.what_to_do.invite.select_local=Please select local target directory for t
 wizard.what_to_do.load_invite.tip=Choose this option to setup a folder from an invitation
 wizard.what_to_do.load_invite=Open invitation file
 wizard.what_to_do.join_online.tip=Choose this option locally join an Online Storage folder
-wizard.what_to_do.join_online=Join Online Storage folder
+wizard.what_to_do.join_online=Sync previously setup folders
 wizard.error_title=Wizard error
 wizard.what_to_do.no_os_text=Sorry, there are no unjoined\nOnline Storage folders available
 wizard.what_to_do.open_online_documentation.tip=Open online documentation about setting up PowerFolder
