Folder create ArchiveModeSelectorPanel, ref #1685

--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -1064,7 +1064,7 @@ settings_tab.add_a_pattern.text=Enter a pattern to exclude files from synchroniz
 settings_tab.add_a_pattern.title=Add hignore pattern
 settings_tab.add_patterns.text_1=The following ignore patterns will be added
 settings_tab.add_patterns.title=Add ignore patterns
-settings_tab.archive_mode=Backup local file versions
+general.archive_mode=Backup local file versions
 settings_tab.confirm_local_folder_move.text=Local folder will be moved from\n{0}\nto\n{1}.
 settings_tab.confirm_local_folder_move.title=Confirm move
 settings_tab.edit_a_pattern.text=Edit a pattern to exclude files from synchronization
