--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -790,8 +790,8 @@ general.yesterday=Yesterday
 home_tab.computers=Computer(s)
 home_tab.files_available=File(s) available
 home_tab.new_warnings=Warning(s)
-home_tab.files_downloaded=File(s) downloaded
-home_tab.files_uploaded=File(s) uploaded
+home_tab.files_downloads=File(s) downloaded
+home_tab.files_uploads=File(s) uploaded
 home_tab.folders=Folder(s)
 home_tab.in_sync=All folders are synchronized
 home_tab.sync_eta=All folders will be synchronized {0}
